--- a/myStyle2.css
+++ b/myStyle2.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;500;700&display=swap');
+
 *{
     margin: 0px;
     padding: 0px;
